# SlidingGame

./: .gitignore  CMakeLists.txt  main.cpp
Inc/SlidingGame/CLI/: CliRenderer.h  Themes.h
Inc/SlidingGame/Core/: Board.h  Board.hpp  SlidingGame.h
Inc/SlidingGame/Core/Cell/: Cell.h  Cell.hpp  EmptyCell.h  EmptyCell.hpp  NumberCell.h  NumberCell.hpp
Inc/SlidingGame/GUI/: MainWindow.h
Inc/SlidingGame/Utils/: Shuffler.h
Src/CLI/: CMakeLists.txt  CliRenderer.cpp  main.cpp
Src/Core/: Board.cpp  CMakeLists.txt  SlidingGame.cpp
Src/Core/Cell/: Cell.cpp  EmptyCell.cpp  NumberCell.cpp
Src/GUI/: CMakeLists.txt  MainWindow.cpp  MainWindow.ui  main.cpp
Src/Utils/: CMakeLists.txt  Shuffler.cpp
Tests/: CMakeLists.txt
Tests/Core/: BoardTests.cpp  CMakeLists.txt  CellTests.cpp  SlidingGameTests.cpp
_codeql_build_dir/: DartConfiguration.tcl
_codeql_build_dir/Src/CLI/: SlidingGameCLI
_codeql_build_dir/Tests/: SlidingGameTests_include-b12d07c.cmake
